step-by-step/k8s-deployment/02_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  selector:
    matchLabels:
      app: my-api
  replicas: 1
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
      - name: my-api
        image: fergab22.azurecr.io/myapi:0.1
        ports:
          - containerPort: 80
