step-by-step/k8s-deployment/05_add_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  selector:
    matchLabels:
      app: my-api
  replicas: 1
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
      - name: my-api
        image: fergab22.azurecr.io/myapi:0.1
        ports:
          - containerPort: 80
        volumeMounts:
        - name: appsettings-volume
          mountPath: /app/config
        - name: secrets-store01
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: appsettings-volume
        configMap:
          name: my-app-config
      - name: secrets-store01
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-secret"
---
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  selector:
    app: my-api
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
